--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@
             transform: translateY(0);
         }
     }
+
+    .pb-safe {
+        padding-bottom: env(safe-area-inset-bottom);
+    }
 }
 
 @layer base {
